--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^2.3.2
   hooks_riverpod: ^2.3.2
@@ -35,6 +31,8 @@ dependencies:
   riverpod_annotation: ^2.1.1
   firebase_database: ^10.1.1
   syncfusion_flutter_datagrid: ^21.1.41
+  firebase_auth: ^4.4.2
+  firebase_ui_auth: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: SocialIcons
+      fonts:
+        - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
